# orkestra

./: .dockerignore  .env  .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.yml  postgres-default.env  rust-toolchain
orkestra-auth-system/: Cargo.toml  Dockerfile  default.env
orkestra-auth-system/migrations/: 20240713083627_create_users.down.sql  20240713083627_create_users.up.sql
orkestra-auth-system/src/: main.rs
orkestra-auth-system/src/handlers/: mod.rs
orkestra-auth-system/src/plugins/login/: controller.rs  dto.rs  error.rs  router.rs  use_case.rs
orkestra-auth-system/src/plugins/signup/: controller.rs  dto.rs  error.rs  router.rs  use_case.rs
orkestra-auth-system/src/shared/: config.rs  context.rs  database.rs  logger.rs  mod.rs  router.rs
orkestra-auth-system/src/shared/integrations/: vk.rs
orkestra-auth-system/src/shared/integrations/vk/: api.rs  controller.rs  dto.rs  error.rs  mod.rs  models.rs  router.rs
orkestra-server-manager/: Cargo.toml  Dockerfile  default.env
orkestra-server-manager/Server/: FunkyPiratesServer.sh  Manifest_NonUFSFiles_Linux.txt  Manifest_UFSFiles_Linux.txt
orkestra-server-manager/Server/Engine/Saved/Config/LinuxServer/: Manifest.ini
orkestra-server-manager/Server/FunkyPirates/Binaries/Linux/: FunkyPiratesServer-Linux-Shipping
orkestra-server-manager/Server/FunkyPirates/Content/Paks/: FunkyPirates-LinuxServer.pak  FunkyPirates-LinuxServer.ucas  FunkyPirates-LinuxServer.utoc  global.ucas  global.utoc
orkestra-server-manager/Server/FunkyPirates/Saved/Config/CrashReportClient/UECC-Linux-6A5FE6A2E8C04FFBA8E9D780896F6B15/: CrashReportClient.ini
orkestra-server-manager/Server/FunkyPirates/Saved/Config/LinuxServer/: Engine.ini  GameUserSettings.ini
orkestra-server-manager/src/: main.rs
orkestra-server-manager/src/handlers/: mod.rs
orkestra-server-manager/src/models/: mod.rs  session.rs
orkestra-server-manager/src/plugins/: mod.rs
orkestra-server-manager/src/plugins/create_session/: controller.rs  dto.rs  error.rs  router.rs  use_case.rs
orkestra-server-manager/src/plugins/filter_sessions/: controller.rs  dto.rs  router.rs  use_case.rs
orkestra-server-manager/src/plugins/join_session/: controller.rs  dto.rs  error.rs  mod.rs  router.rs  use_case.rs
orkestra-server-manager/src/plugins/remove_player_from_session/: controller.rs  dto.rs  error.rs  router.rs  use_case.rs
orkestra-server-manager/src/shared/: config.rs  context.rs  logger.rs  mod.rs  router.rs  utils.rs
orkestra-server-manager/src/shared/services/: mod.rs
orkestra-server-manager/src/shared/services/server_cloner/: mod.rs  simple_server_cloner.rs
orkestra-server-manager/src/shared/services/sesser/: error.rs  inmemory_sesser.rs  mod.rs
