[package]
name = "orkestra-auth-system"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "migrate"] }
envy = "0.4"
pbkdf2 = "0.12.2"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = "0.3.0"
tokio = { version = "1.38.0", features = ["full"] }