[package]
name = "orkestra-auth-system"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
envy = "0.4"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand = { version = "0.8.5", features = ["getrandom"] }
rand_chacha = "0.3.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "migrate", "uuid"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.0"
tokio = { version = "1.38.0", features = ["full"] }