[package]
name = "orkestra-server-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
envy = "0.4"
dashmap = "6.0.1"
rand = { version = "0.8.5", features = ["getrandom"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = "0.3.0"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }